--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "g": "^2.0.1",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,6 +15,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
+    "serve": "^14.2.4",
     "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4"
   },
